--- a/main.html
+++ b/main.html
@@ -8,29 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Kyoto, Japan</h1>
+	 <h1>Kyoto, Japan</h1>
   <br>
-  <p>
-    Nestled in the heart of Japan, <strong>Kyoto</strong> is a city that beautifully blends tradition and modernity.
-    Known for its ancient temples, vibrant culture, and scenic landscapes, Kyoto offers visitors a serene yet enriching experience.
-  </p>
 
-  <h2>Top 5 Attractions</h2>
+  <p>Kyoto is a historic city in Japan known for its classical Buddhist temples, gardens, imperial palaces, and traditional wooden houses. It is a destination rich in culture and beauty.</p>
+
   <ol>
-    <li><strong>Kinkaku-ji</strong> (Golden Pavilion) - A stunning Zen temple covered in <em>gold leaf</em>.</li>
-    <li><em>Fushimi Inari Shrine</em> - Famous for its endless path of <strong>vermilion torii gates</strong>.</li>
-    <li><strong>Arashiyama Bamboo Grove</strong> - Walk through a mystical <em>bamboo forest</em>.</li>
-    <li><em>Gion District</em> - Discover traditional <strong>geisha culture</strong> in historic streets.</li>
-    <li><strong>Philosopher’s Path</strong> - A scenic walk along a canal lined with <em>cherry blossoms</em>.</li>
+    <li><strong>Kinkaku-ji</strong> - The Golden Pavilion temple with a stunning reflection on the lake.</li>
+    <li><em>Fushimi Inari Shrine</em> - Famous for its thousands of red torii gates.</li>
+    <li><strong>Arashiyama Bamboo Grove</strong> - A peaceful forest walk among tall bamboo trees.</li>
+    <li><em>Gion District</em> - Home to Kyoto’s traditional geisha culture.</li>
+    <li><strong>Philosopher’s Path</strong> - A beautiful walking trail lined with cherry trees.</li>
   </ol>
 
-  <h2>Must-Try Foods</h2>
   <ul>
-    <li><strong>Kaiseki Ryori</strong> - A traditional <em>multi-course Japanese meal</em>.</li>
-    <li><em>Yudofu</em> - A simple but delicious <strong>tofu hot pot</strong>.</li>
-    <li><strong>Matcha Sweets</strong> - Desserts made from <em>Kyoto’s signature green tea</em>.</li>
-    <li><em>Saba Sushi</em> - A specialty <strong>mackerel sushi</strong> found in Kyoto.</li>
-    <li><strong>Tempura</strong> - Lightly battered and <em>deep-fried seasonal vegetables and seafood</em>.</li>
+    <li><strong>Kaiseki</strong> - A traditional multi-course Japanese meal.</li>
+    <li><em>Yudofu</em> - A tofu dish popular near Zen temples.</li>
+    <li><strong>Matcha Desserts</strong> - Sweets made with Kyoto’s famous green tea.</li>
+    <li><em>Saba Sushi</em> - Kyoto-style mackerel sushi.</li>
+    <li><strong>Tempura</strong> - Lightly fried seafood and vegetables.</li>
   </ul>
     <script type="text/javascript" src="./script.js">
 </script>
