--- a/main.html
+++ b/main.html
@@ -8,25 +8,26 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	 <h1>Kyoto, Japan</h1>
+	  <h1>Kyoto, Japan</h1>
   <br>
-
-  <p>Kyoto is a historic city in Japan known for its classical Buddhist temples, gardens, imperial palaces, and traditional wooden houses. It is a destination rich in culture and beauty.</p>
+  <p>
+    Kyoto is a historic city in Japan known for its classical Buddhist temples, gardens, imperial palaces, and traditional wooden houses. It is a destination rich in culture and beauty.
+  </p>
 
   <ol>
-    <li><strong>Kinkaku-ji</strong> - The Golden Pavilion temple with a stunning reflection on the lake.</li>
-    <li><em>Fushimi Inari Shrine</em> - Famous for its thousands of red torii gates.</li>
-    <li><strong>Arashiyama Bamboo Grove</strong> - A peaceful forest walk among tall bamboo trees.</li>
-    <li><em>Gion District</em> - Home to Kyoto’s traditional geisha culture.</li>
-    <li><strong>Philosopher’s Path</strong> - A beautiful walking trail lined with cherry trees.</li>
+    <li><strong>Kinkaku-ji</strong> – The <em>Golden Pavilion</em> temple with a stunning reflection on the lake.</li>
+    <li><strong>Fushimi Inari Shrine</strong> – Famous for its thousands of <em>red torii gates</em>.</li>
+    <li><strong>Arashiyama Bamboo Grove</strong> – A peaceful forest walk among <em>tall bamboo trees</em>.</li>
+    <li><strong>Gion District</strong> – Home to Kyoto’s traditional <em>geisha culture</em>.</li>
+    <li><strong>Philosopher’s Path</strong> – A beautiful <em>walking trail</em> lined with cherry trees.</li>
   </ol>
 
   <ul>
-    <li><strong>Kaiseki</strong> - A traditional multi-course Japanese meal.</li>
-    <li><em>Yudofu</em> - A tofu dish popular near Zen temples.</li>
-    <li><strong>Matcha Desserts</strong> - Sweets made with Kyoto’s famous green tea.</li>
-    <li><em>Saba Sushi</em> - Kyoto-style mackerel sushi.</li>
-    <li><strong>Tempura</strong> - Lightly fried seafood and vegetables.</li>
+    <li><strong>Kaiseki</strong> – A traditional <em>multi-course Japanese meal</em>.</li>
+    <li><strong>Yudofu</strong> – A <em>tofu dish</em> popular near Zen temples.</li>
+    <li><strong>Matcha Desserts</strong> – Sweets made with Kyoto’s famous <em>green tea</em>.</li>
+    <li><strong>Saba Sushi</strong> – Kyoto-style <em>mackerel sushi</em>.</li>
+    <li><strong>Tempura</strong> – Lightly <em>fried seafood and vegetables</em>.</li>
   </ul>
     <script type="text/javascript" src="./script.js">
 </script>
