--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	  <h1>Kyoto, Japan</h1>
+	  <h1>Kyoto</h1>
   <br>
   <p>
     Kyoto is a historic city in Japan known for its classical Buddhist temples, gardens, imperial palaces, and traditional wooden houses. It is a destination rich in culture and beauty.
@@ -27,8 +27,7 @@
     <li><strong>Yudofu</strong> – A <em>tofu dish</em> popular near Zen temples.</li>
     <li><strong>Matcha Desserts</strong> – Sweets made with Kyoto’s famous <em>green tea</em>.</li>
     <li><strong>Saba Sushi</strong> – Kyoto-style <em>mackerel sushi</em>.</li>
-    <li><strong>Tempura</strong> – Lightly <em>fried seafood and vegetables</em>.</li>
-  </ul>
+    
     <script type="text/javascript" src="./script.js">
 </script>
 
