--- a/main.html
+++ b/main.html
@@ -15,20 +15,20 @@
   </p>
 
   <ol>
-    <li><strong>Kinkaku-ji</strong> – The <em>Golden Pavilion</em> temple with a stunning reflection on the lake.</li>
-    <li><strong>Fushimi Inari Shrine</strong> – Famous for its thousands of <em>red torii gates</em>.</li>
-    <li><strong>Arashiyama Bamboo Grove</strong> – A peaceful forest walk among <em>tall bamboo trees</em>.</li>
-    <li><strong>Gion District</strong> – Home to Kyoto’s traditional <em>geisha culture</em>.</li>
-    <li><strong>Philosopher’s Path</strong> – A beautiful <em>walking trail</em> lined with cherry trees.</li>
+    <li><b>Kinkaku-ji</b> – The <i>Golden Pavilion</i> temple with a stunning reflection on the lake.</li>
+    <li><b>Fushimi Inari Shrine</b> – Famous for its thousands of <i>red torii gates</i>.</li>
+    <li><b>Arashiyama Bamboo Grove</b> – A peaceful forest walk among <i>tall bamboo trees</i>.</li>
+    <li><b>Gion District</b> – Home to Kyoto’s traditional <i>geisha culture</i>.</li>
+    <li><b>Philosopher’s Path</b> – A beautiful <i>walking trail</i> lined with cherry trees.</li>
   </ol>
 
   <ul>
-    <li><strong>Kaiseki</strong> – A traditional <em>multi-course Japanese meal</em>.</li>
-    <li><strong>Yudofu</strong> – A <em>tofu dish</em> popular near Zen temples.</li>
-    <li><strong>Matcha Desserts</strong> – Sweets made with Kyoto’s famous <em>green tea</em>.</li>
-    <li><strong>Saba Sushi</strong> – Kyoto-style <em>mackerel sushi</em>.</li>
+    <li><b>Kaiseki</b> – A traditional <i>multi-course Japanese meal</i>.</li>
+    <li><b>Yudofu</b> – A <i>tofu dish</i> popular near Zen temples.</li>
+    <li><b>Matcha Desserts</b> – Sweets made with Kyoto’s famous <i>green tea</i>.</li>
+    <li><b>Saba Sushi</b> – Kyoto-style <i>mackerel sushi</i>.</li>
+    <li><b>Tempura</b> – Lightly <i>fried seafood and vegetables</i>.</li>
   </ul>
-    
     <script type="text/javascript" src="./script.js">
 </script>
 
